[package]
name = "dynwave"
version = "0.1.0"
edition = "2021"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
description = "Dynamic audio player based on fixed samples stream"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Amjad50/dynwave"
keywords = ["audio", "wave", "stream"]
categories = ["audio", "stream"]
rust-version = "1.62.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
ringbuf = { version = "0.3", default-features = false, features = ["alloc"] }
rubato = "0.14"
